@@ -18,10 +18,11 @@
 #          autolock: Mouse will automatically lock, if you click on the screen. (Press CTRL-F10 to unlock)
 # autolock_feedback: Autolock status feedback type, i.e. visual, auditive, none.
 #                      Possible values: none, beep, flash.
-# clip_mouse_button: Select the mouse button for the shared clipboard copy/paste function.
-#                      The default mouse button is "right". Set to "middle" if the middle mouse button is desired, or "none" to disable this feature.
-#                      Possible values: none, middle, right.
-# clip_key_modifier: Change the keyboard modifier for the shared clipboard copy/paste function using the right mouse button.
+# clip_mouse_button: Select the mouse button or use arrow keys for the shared clipboard copy/paste function.
+#                      The default mouse button is "right", which means using the right mouse button to select text, copy to and paste from the host clipboard.
+#                      Set to "middle" to use the middle mouse button, "arrows" to use arrow keys instead of a mouse button, or "none" to disable this feature.
+#                      Possible values: none, middle, right, arrows.
+# clip_key_modifier: Change the keyboard modifier for the shared clipboard copy/paste function using a mouse button or arrow keys.
 #                      The default modifier is "shift" (both left and right shift keys). Set to "none" if no modifier is desired.
 #                      Possible values: none, alt, lalt, ralt, ctrl, lctrl, rctrl, shift, lshift, rshift.
 #  clip_paste_speed: Set keyboard speed for pasting from the shared clipboard.
